# DRM-VNCserver

./: CMakeLists.txt  README.md
src/: drm-vncserver.c  framebuffer-vncserver.c
yocto/: drm-vncserver_git.bb
yocto/files/: drmvnc.service  xf86drm.patch  xf86drmMode.patch
